--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -209,7 +209,7 @@ Greater $RH$ in closed-inner canopy can also increase $T_{leaf}$ relatively more
 Under other conditions $T_{leaf}$ tracks $T_{air}$, due to high evapotranspiration and therefore differs little between understory and canopy (Fig. `r fig_NEON_vertical`).
 
 **However, canopy leaves can reach much higher maximum $T_{leaf}$, and higher $T_{leaf} - T_{air}$, than understory leaves.** 
-Closed-canopy forests, including tropical and temperate broadleaf forests, experience greater $T_{leaf} - T_{air}$ and higher maximum $T_{leaf}$ in the upper canopies than buffered lower-canopies, sometimes exceeding optimum for photosynthesis ($T_{opt}$) and $T_{air}$, from $gs$ limitation and irradiance [@niinemetsShapeLeafPhotosynthetic1999; @doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @mauTemperateTropicalForest2018a; @rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018]. Comparing forests, upper canopies of temperate-deciduous species can have greater $T_{leaf}$ - $T_{air}$ than the upper canopies of tropical moist and wet forest species [@mauTemperateTropicalForest2018a] and sparse canopies [@leuzingerTreeSpeciesDiversity2007; @pauTropicalForestTemperature2018] . At a specie-specific level, leaf boundary resistance is lower for conifers than broad-leaf species, resulting in higher mean $T_{leaf}$ in broad-leaf trees than conifer canopies [@leuzingerTreeSpeciesDiversity2007; @pauTropicalForestTemperature2018]. Spatial distribution of canopy temperature also shows that exposed tropical tree barks can be much warmer than leaves and flowers [@pauTropicalForestTemperature2018]. 
+Closed-canopy forests, including tropical and temperate broadleaf forests, experience greater $T_{leaf} - T_{air}$ and higher maximum $T_{leaf}$ in the upper canopies than buffered lower-canopies, sometimes exceeding optimum for photosynthesis ($T_{opt}$) and $T_{air}$, from $gs$ limitation and irradiance [@niinemetsShapeLeafPhotosynthetic1999; @doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @mauTemperateTropicalForest2018a; @rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018]. Comparing upper canopies, temperate-deciduous species can have greater $T_{leaf}$ - $T_{air}$ than the upper canopies of tropical moist and wet forest species [@mauTemperateTropicalForest2018a] and sparse canopies [@leuzingerTreeSpeciesDiversity2007; @pauTropicalForestTemperature2018], however considering a broader range of forests, this might not be always the case (Fig. `r fig_NEON_vertical`). At a specie-specific level, leaf boundary resistance is lower for conifers than broad-leaf species, resulting in higher mean $T_{leaf}$ in broad-leaf trees than conifer canopies [@leuzingerTreeSpeciesDiversity2007; @pauTropicalForestTemperature2018]. Spatial distribution of canopy temperature also shows that exposed tropical tree barks can be much warmer than leaves and flowers [@pauTropicalForestTemperature2018]. 
 
 ## Leaf traits 
 
