--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -4302,6 +4302,18 @@
   langid = {english}
 }
 
+@article{marshallFoliageHeightInfluences2003,
+  title = {Foliage Height Influences Specific Leaf Area of Three Conifer Species},
+  author = {Marshall, John and Monserud, Robert},
+  date = {2003-01-01},
+  journaltitle = {Canadian Journal of Forest Research-revue Canadienne De Recherche Forestiere - CAN J FOREST RES},
+  volume = {33},
+  pages = {164--170},
+  doi = {10.1139/x02-158},
+  abstract = {Specific leaf area (SLA), the ratio of projected leaf area to leaf dry mass, is a critical parameter in many forest process models. SLA describes the efficiency with which the leaf captures light relative to the biomass invested in the leaf. It increases from top to bottom of a canopy, but it is unclear why. We sampled stands with low and ele- vated canopies (young and old stands) to determine whether SLA is related to water potential, as inferred from branch height and length, or shade, as inferred from branch position relative to the rest of the canopy, or both. We studied western white pine (Pinus monticola Dougl. ex D. Don), ponderosa pine (Pinus ponderosa Dougl. ex P. \& C. Laws.), and interior Douglas-fir (Pseudotsuga menziesii (Mirb.) Franco var. glauca) in northern Idaho. SLA decreased with branch height (P {$<$} 0.0001) at rates that varied among species (P {$<$} 0.0001). Branch length had no influence on SLA (P = 0.85). We detected no differences with canopy elevation (P = 0.90), but the slopes of lines relating SLA to branch height may have differed between the canopy elevation classes (P = 0.039). The results are consistent with predictions based on the hypothesis that SLA decreases as the gravitational component of water potential falls. The lack of a strong shading effect simplifies the estimation of canopy SLA for process models, requiring only species and branch heights.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\JPIAGB2V\\Marshall and Monserud - 2003 - Foliage height influences specific leaf area of th.pdf}
+}
+
 @article{martin_boundary_1999,
   title = {Boundary Layer Conductance, Leaf Temperature and Transpiration of {{Abies}} Amabilis Branches},
   author = {Martin, T. A. and Hinckley, T. M. and Meinzer, F. C. and Sprugel, D. G.},
