--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -2115,6 +2115,25 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\PL22JTI4\\13580.html}
 }
 
+@article{gouldenCaliforniaForestDieoff2019,
+  title = {California Forest Die-off Linked to Multi-Year Deep Soil Drying in 2012–2015 Drought},
+  author = {Goulden, M. L. and Bales, R. C.},
+  date = {2019-08},
+  journaltitle = {Nat. Geosci.},
+  volume = {12},
+  pages = {632--637},
+  publisher = {{Nature Publishing Group}},
+  issn = {1752-0908},
+  doi = {10.1038/s41561-019-0388-5},
+  url = {http://www.nature.com/articles/s41561-019-0388-5},
+  urldate = {2021-06-15},
+  abstract = {Widespread episodes of recent forest die-off have been tied to the occurrence of anomalously warm droughts, although the underlying mechanisms remain inadequately understood. California’s 2012–2015 drought, with exceptionally low precipitation and warmth, and widespread conifer death, provides an opportunity to explore the chain of events leading to forest die-off. Here, we present the spatial and temporal patterns of die-off and moisture deficit during California’s drought, based on field and remote sensing observations. We found that die-off was closely tied to multi-year deep-rooting-zone drying, and that this relationship provides a framework with which to diagnose and predict mortality. Marked tree death in an intensively studied Sierra Nevada forest followed a four-year moisture overdraft, with cumulative 2012–2015 evapotranspiration exceeding precipitation by \textasciitilde 1,500\,mm, and subsurface moisture exhaustion to 5–15-m depth. Observations across the entire Sierra Nevada further linked tree death to deep drying, with die-off and moisture overdraft covarying across latitude and elevation. Unusually dense vegetation and warm temperatures accelerated southern Sierran evapotranspiration in 2012–2015, intensifying overdraft and compounding die-off by an estimated 55\%. Climate change is expected to further amplify evapotranspiration and moisture overdraft during drought, potentially increasing Sierran tree death during drought by \textasciitilde 15–20\%\,°C−1.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\9KXJYTNR\\Goulden and Bales - 2019 - California forest die-off linked to multi-year dee.pdf;C\:\\Users\\Me\\Zotero\\storage\\IPSMDAHR\\s41561-019-0388-5.html},
+  issue = {8},
+  langid = {english},
+  number = {8}
+}
+
 @article{gowerRapidEstimationLeaf1991,
   title = {Rapid {{Estimation}} of {{Leaf Area Index}} in {{Conifer}} and {{Broad}}-{{Leaf Plantations}}},
   author = {Gower, Stith T. and Norman, John M.},
