--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -511,6 +511,25 @@
   number = {10}
 }
 
+@article{bennettResistanceAfricanTropical2021,
+  title = {Resistance of {{African}} Tropical Forests to an Extreme Climate Anomaly},
+  author = {Bennett, Amy C. and Dargie, Greta C. and Cuni-Sanchez, Aida and Mukendi, John Tshibamba and Hubau, Wannes and Mukinzi, Jacques M. and Phillips, Oliver L. and Malhi, Yadvinder and Sullivan, Martin J. P. and Cooper, Declan L. M. and Adu-Bredu, Stephen and Affum-Baffoe, Kofi and Amani, Christian A. and Banin, Lindsay F. and Beeckman, Hans and Begne, Serge K. and Bocko, Yannick E. and Boeckx, Pascal and Bogaert, Jan and Brncic, Terry and Chezeaux, Eric and Clark, Connie J. and Daniels, Armandu K. and de Haulleville, Thales and Kamdem, Marie-Noël Djuikouo and Doucet, Jean-Louis and Ondo, Fidèle Evouna and Ewango, Corneille E. N. and Feldpausch, Ted R. and Foli, Ernest G. and Gonmadje, Christelle and Hall, Jefferson S. and Hardy, Olivier J. and Harris, David J. and Ifo, Suspense A. and Jeffery, Kathryn J. and Kearsley, Elizabeth and Leal, Miguel and Levesley, Aurora and Makana, Jean-Remy and Lukasu, Faustin Mbayu and Medjibe, Vincent P. and Mihindu, Vianet and Moore, Sam and Begone, Natacha Nssi and Pickavance, Georgia C. and Poulsen, John R. and Reitsma, Jan and Sonké, Bonaventure and Sunderland, Terry C. H. and Taedoumg, Hermann and Talbot, Joey and Tuagben, Darlington S. and Umunay, Peter M. and Verbeeck, Hans and Vleminckx, Jason and White, Lee J. T. and Woell, Hannsjoerg and Woods, John T. and Zemagho, Lise and Lewis, Simon L.},
+  date = {2021-05-25},
+  journaltitle = {PNAS},
+  volume = {118},
+  publisher = {{National Academy of Sciences}},
+  issn = {0027-8424, 1091-6490},
+  doi = {10.1073/pnas.2003169118},
+  url = {http://www.pnas.org/content/118/21/e2003169118},
+  urldate = {2021-06-15},
+  abstract = {Author Information Amy C. Bennetta,1, Greta C. Dargiea, Aida Cuni-Sanchezb,c, John Tshibamba Mukendid,e,f, Wannes Hubaua,d,g, Jacques M. Mukinzih,i,j, Oliver L. Phillipsa, Yadvinder Malhik, Martin J. P. Sullivana,l, Declan L. M. Cooperc, Stephen Adu-Bredum, Kofi Affum-Baffoen, Christian A. Amanio,p, Lindsay F. Baninq, Hans Beeckmand, Serge K. Begnea,r, Yannick E. Bockos, Pascal Boeckxt, Jan Bogaertu, Terry Brncicv, Eric Chezeauxw, Connie J. Clarkx, Armandu K. Danielsy, Thales de Haullevilled, Marie-Noël Djuikouo Kamdemr,z, Jean-Louis Doucetaa, Fidèle Evouna Ondobb, Corneille E. N. Ewangoe,h,cc, Ted R. Feldpauschdd, Ernest G. Folim, Christelle Gonmadjeee, Jefferson S. Hallff, Olivier J. Hardygg, David J. Harrishh, Suspense A. Ifoii, Kathryn J. Jefferyjj, Elizabeth Kearsleyg,kk, Miguel Lealll, Aurora Levesleya, Jean-Remy Makanamm, Faustin Mbayu Lukasue, Vincent P. Medjibenn, Vianet Mihinduoo,pp, Sam Moorek, Natacha Nssi Begoneqq, Georgia C. Pickavancea, John R. Poulsenpp, Jan Reitsmarr, Bonaventure Sonkér, Terry C. H. Sunderlandp,ss, Hermann Taedoumgr,tt, Joey Talbota,uu, Darlington S. Tuagbeny, Peter M. Umunayvv,ww, Hans Verbeeckkk, Jason Vleminckxxx,yy, Lee J. T. Whitejj,qq,zz, Hannsjoerg Woellaaa, John T. Woodsbbb, Lise Zemaghoo, and Simon L. Lewisa,caSchool of Geography, University of Leeds, Leeds, LS2 9JT, United Kingdom;bDepartment of Environment and Geography, University of York, York, YO10 5NG, United Kingdom;cDepartment of Geography, University College London, London, WC1E 6BT, United Kingdom;dService of Wood Biology, Royal Museum for Central Africa, Tervuren, 3080 Belgium;eFaculté de Gestion de Ressources Naturelles Renouvelables, Université de Kisangani, Kisangani, R408, Democratic Republic of Congo;fFaculté des Sciences Appliquées, Université de Mbujimayi, Mbujimayi, Democratic Republic of Congo;gDepartment of Environment, Laboratory of Wood Technology, Ghent University, 9000 Ghent, Belgium;hDemocratic Republic of Congo Programme, Wildlife Conservation Society, Kinshasa, Democratic Republic of Congo;iSalonga National Park, Kinshasa, Democratic Republic of Congo;jWorld Wide Fund for Nature, 1196 Gland, Switzerland;kEnvironmental Change Institute, School of Geography and the Environment, Oxford University, Oxford, OX1 3QY, United Kingdom;lDepartment of Natural Sciences, Manchester Metropolitan University, Manchester, M15 6BH, United Kingdom;mForestry Research Institute of Ghana (FORIG), Kumasi, Ghana;nMensuration Unit, Forestry Commission of Ghana, Kumasi, Ghana;oUniversité Officielle de Bukavu, Bukavu, Democratic Republic of Congo;pCenter for International Forestry Research (CIFOR), Bogor 16115, Indonesia;qCentre for Ecology and Hydrology, Penicuik, EH26 0QB, United Kingdom;rPlant Systematic and Ecology Laboratory, Higher Teachers’ Training College, University of Yaounde I, Yaounde, Cameroon;sFaculté des Sciences et Techniques, Laboratoire de Botanique et Ecologie, Université Marien Ngouabi, Brazzaville, Republic of Congo;tIsotope Bioscience Laboratory (ISOFYS), Ghent University, 9000 Ghent, Belgium;uBiodiversity and Landscape Unit, Gembloux Agro-Bio Tech, Université de Liège, 5030 Gembloux, Belgium;vCongo Programme, Wildlife Conservation Society, Brazzaville, Republic of Congo;wRougier-Gabon, Libreville, Gabon;xNicholas School of the Environment, Duke University, Durham, NC 27710;yForestry Development Authority of the Government of Liberia (FDA), Monrovia, Liberia;zFaculty of Science, Department of Botany and Plant Physiology, University of Buea, Buea, Cameroon;aaTERRA Teaching and Research Centre, Forest Is Life, Gembloux Agro-Bio Tech, University of Liège, 5030 Gembloux, Belgium;bbAgence Nationale des Parcs Nationaux, Libreville, Gabon;ccCentre de Formation et de Recherche en Conservation Forestiere (CEFRECOF), Epulu, Democratic Republic of Congo;ddGeography, College of Life and Environmental Sciences, University of Exeter, Exeter, EX4 4QE, United Kingdom;eeNational Herbarium, Yaounde, Cameroon;ffForest Global Earth Observatory, Smithsonian Tropical Research Institute, Washington, DC 20560;ggEvolutionary Biology and Ecology, Faculté des Sciences, Université Libre de Bruxelles, 1050 Bruxelles, Belgium;hhRoyal Botanic Garden Edinburgh, Edinburgh, EH3 5NZ, United Kingdom;iiÉcole Normale Supérieure, Département des Sciences et Vie de la Terre, Laboratoire de Géomatique et d’Ecologie Tropicale Appliquée, Université Marien Ngouabi, Brazzaville, Republic of Congo;jjBiological and Environmental Sciences, University of Stirling, Stirling, FK9 4LA, United Kingdom;kkDepartment of Environment, Computational \& Applied Vegetation Ecology (Cavelab), Ghent University, 9000 Ghent, Belgium;llUganda Programme, Wildlife Conservation Society, Kampala, Uganda;mmFaculté des Sciences, Laboratoire d’écologie et aménagement forestier, Université de Kisangani, Kisangani, Democratic Republic of Congo;nnCenter for Tropical Conservation, Duke University, Durham, NC 27705;ooCommission of Central African Forests (COMIFAC), Yaounde, Cameroon;ppAgence Nationale des Parcs Nationaux, Libreville, Gabon;qqMinistry of Forests, Seas, Environment and Climate, Libreville, Gabon;rrBureau Waardenburg, 4101 CK Culemborg, The Netherlands;ssFaculty of Forestry, University of British Columbia, Vancouver, BC V6T 1Z4, Canada;ttBiodiversity International, Yaounde, Cameroon;uuInstitute for Transport Studies, University of Leeds, Leeds, LS2 9JT, United Kingdom;vvYale School of Forestry \& Environmental Studies, Yale University, New Haven, CT 06511;wwWildlife Conservation Society, New York, NY 11224;xxInternational Center for Tropical Botany, Department of Biological Sciences, Florida International University, University Park, FL 33199;yyFaculté des Sciences, Service d’Évolution Biologique et écologie, Université Libre de Bruxelles, 1050 Bruxelles, Belgium;zzInstitut de Recherche en Ecologie Tropicale, Libreville, Gabon;aaaSommersbergseestrasse, 8990 Bad Aussee, Austria;bbbWilliam R. Tolbert, Jr. College of Agriculture and Forestry, University of Liberia, Monrovia, LiberiaEdited by Jerome Chave, Centre national de la recherche scientifique, Toulouse, France, and accepted by Editorial Board Member Ruth DeFries February 1, 2021 (received for review March 8, 2020) Footnotes↵1To whom correspondence may be addressed. Email: a.c.bennett@leeds.ac.uk.Author contributions: A.C.B., O.L.P., and S.L.L. designed research; A.C.B., G.C.D., A.C.-S., J.T.M., W.H., J.M.M., O.L.P., Y.M., M.J.P.S., D.L.M.C., S.A.-B., K.A.-B., C.A.A., L.F.B., H.B., S.K.B., Y.E.B., P.B., J.B., T.B., E.C., C.J.C., A.K.D., T.d.H., M.-N.D.K., J.-L.D., F.E.O., C.E.N.E., T.R.F., E.G.F., C.G., J.S.H., O.J.H., D.J.H., S.A.I., K.J.J., E.K., M.L., J.-R.M., F.M.L., V.P.M., V.M., S.M., N.N.B., J.R.P., J.R., B.S., T.C.H.S., H.T., J.T., D.S.T., P.M.U., H.V., J.V., L.J.T.W., H.W., J.T.W., L.Z., and S.L.L. performed research; M.J.P.S., A.L., and G.C.P. contributed new analytic tools; S.L.L. conceived and managed the AfriTRON forest plot recensus programme; A.C.B. analyzed data; and A.C.B. and S.L.L. wrote the paper.The authors declare no competing interest.This article is a PNAS Direct Submission. J.C. is a guest editor invited by the Editorial Board.This article contains supporting information online at https://www-pnas-org.smithsonian.idm.oclc.org/lookup/suppl/doi:10.1073/pnas.2003169118/-/DCSupplemental.},
+  eprint = {34001597},
+  eprinttype = {pmid},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\INZKSH5A\\Bennett et al. - 2021 - Resistance of African tropical forests to an extre.pdf},
+  langid = {english},
+  number = {21}
+}
+
 @article{bertrandChangesPlantCommunity2011,
   title = {Changes in Plant Community Composition Lag behind Climate Warming in Lowland Forests},
   author = {Bertrand, Romain and Lenoir, Jonathan and Piedallu, Christian and Riofrío-Dillon, Gabriela and de Ruffray, Patrice and Vidal, Claude and Pierrat, Jean-Claude and Gégout, Jean-Claude},
@@ -5761,6 +5780,12 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\SXKR99JN\\226991185_Phenological_Differences_Between_Understory_and_Overstory.html},
   langid = {english},
   organization = {{ResearchGate}}
+}
+
+@online{PDFResistanceAfrican,
+  title = {({{PDF}}) {{Resistance}} of {{African}} Tropical Forests to an Extreme Climate Anomaly},
+  url = {https://www.researchgate.net/publication/351642763_Resistance_of_African_tropical_forests_to_an_extreme_climate_anomaly},
+  urldate = {2021-06-15}
 }
 
 @article{pearcyCrownArchitectureSun2005a,
