--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -525,9 +525,27 @@
   abstract = {Author Information Amy C. Bennetta,1, Greta C. Dargiea, Aida Cuni-Sanchezb,c, John Tshibamba Mukendid,e,f, Wannes Hubaua,d,g, Jacques M. Mukinzih,i,j, Oliver L. Phillipsa, Yadvinder Malhik, Martin J. P. Sullivana,l, Declan L. M. Cooperc, Stephen Adu-Bredum, Kofi Affum-Baffoen, Christian A. Amanio,p, Lindsay F. Baninq, Hans Beeckmand, Serge K. Begnea,r, Yannick E. Bockos, Pascal Boeckxt, Jan Bogaertu, Terry Brncicv, Eric Chezeauxw, Connie J. Clarkx, Armandu K. Danielsy, Thales de Haullevilled, Marie-Noël Djuikouo Kamdemr,z, Jean-Louis Doucetaa, Fidèle Evouna Ondobb, Corneille E. N. Ewangoe,h,cc, Ted R. Feldpauschdd, Ernest G. Folim, Christelle Gonmadjeee, Jefferson S. Hallff, Olivier J. Hardygg, David J. Harrishh, Suspense A. Ifoii, Kathryn J. Jefferyjj, Elizabeth Kearsleyg,kk, Miguel Lealll, Aurora Levesleya, Jean-Remy Makanamm, Faustin Mbayu Lukasue, Vincent P. Medjibenn, Vianet Mihinduoo,pp, Sam Moorek, Natacha Nssi Begoneqq, Georgia C. Pickavancea, John R. Poulsenpp, Jan Reitsmarr, Bonaventure Sonkér, Terry C. H. Sunderlandp,ss, Hermann Taedoumgr,tt, Joey Talbota,uu, Darlington S. Tuagbeny, Peter M. Umunayvv,ww, Hans Verbeeckkk, Jason Vleminckxxx,yy, Lee J. T. Whitejj,qq,zz, Hannsjoerg Woellaaa, John T. Woodsbbb, Lise Zemaghoo, and Simon L. Lewisa,caSchool of Geography, University of Leeds, Leeds, LS2 9JT, United Kingdom;bDepartment of Environment and Geography, University of York, York, YO10 5NG, United Kingdom;cDepartment of Geography, University College London, London, WC1E 6BT, United Kingdom;dService of Wood Biology, Royal Museum for Central Africa, Tervuren, 3080 Belgium;eFaculté de Gestion de Ressources Naturelles Renouvelables, Université de Kisangani, Kisangani, R408, Democratic Republic of Congo;fFaculté des Sciences Appliquées, Université de Mbujimayi, Mbujimayi, Democratic Republic of Congo;gDepartment of Environment, Laboratory of Wood Technology, Ghent University, 9000 Ghent, Belgium;hDemocratic Republic of Congo Programme, Wildlife Conservation Society, Kinshasa, Democratic Republic of Congo;iSalonga National Park, Kinshasa, Democratic Republic of Congo;jWorld Wide Fund for Nature, 1196 Gland, Switzerland;kEnvironmental Change Institute, School of Geography and the Environment, Oxford University, Oxford, OX1 3QY, United Kingdom;lDepartment of Natural Sciences, Manchester Metropolitan University, Manchester, M15 6BH, United Kingdom;mForestry Research Institute of Ghana (FORIG), Kumasi, Ghana;nMensuration Unit, Forestry Commission of Ghana, Kumasi, Ghana;oUniversité Officielle de Bukavu, Bukavu, Democratic Republic of Congo;pCenter for International Forestry Research (CIFOR), Bogor 16115, Indonesia;qCentre for Ecology and Hydrology, Penicuik, EH26 0QB, United Kingdom;rPlant Systematic and Ecology Laboratory, Higher Teachers’ Training College, University of Yaounde I, Yaounde, Cameroon;sFaculté des Sciences et Techniques, Laboratoire de Botanique et Ecologie, Université Marien Ngouabi, Brazzaville, Republic of Congo;tIsotope Bioscience Laboratory (ISOFYS), Ghent University, 9000 Ghent, Belgium;uBiodiversity and Landscape Unit, Gembloux Agro-Bio Tech, Université de Liège, 5030 Gembloux, Belgium;vCongo Programme, Wildlife Conservation Society, Brazzaville, Republic of Congo;wRougier-Gabon, Libreville, Gabon;xNicholas School of the Environment, Duke University, Durham, NC 27710;yForestry Development Authority of the Government of Liberia (FDA), Monrovia, Liberia;zFaculty of Science, Department of Botany and Plant Physiology, University of Buea, Buea, Cameroon;aaTERRA Teaching and Research Centre, Forest Is Life, Gembloux Agro-Bio Tech, University of Liège, 5030 Gembloux, Belgium;bbAgence Nationale des Parcs Nationaux, Libreville, Gabon;ccCentre de Formation et de Recherche en Conservation Forestiere (CEFRECOF), Epulu, Democratic Republic of Congo;ddGeography, College of Life and Environmental Sciences, University of Exeter, Exeter, EX4 4QE, United Kingdom;eeNational Herbarium, Yaounde, Cameroon;ffForest Global Earth Observatory, Smithsonian Tropical Research Institute, Washington, DC 20560;ggEvolutionary Biology and Ecology, Faculté des Sciences, Université Libre de Bruxelles, 1050 Bruxelles, Belgium;hhRoyal Botanic Garden Edinburgh, Edinburgh, EH3 5NZ, United Kingdom;iiÉcole Normale Supérieure, Département des Sciences et Vie de la Terre, Laboratoire de Géomatique et d’Ecologie Tropicale Appliquée, Université Marien Ngouabi, Brazzaville, Republic of Congo;jjBiological and Environmental Sciences, University of Stirling, Stirling, FK9 4LA, United Kingdom;kkDepartment of Environment, Computational \& Applied Vegetation Ecology (Cavelab), Ghent University, 9000 Ghent, Belgium;llUganda Programme, Wildlife Conservation Society, Kampala, Uganda;mmFaculté des Sciences, Laboratoire d’écologie et aménagement forestier, Université de Kisangani, Kisangani, Democratic Republic of Congo;nnCenter for Tropical Conservation, Duke University, Durham, NC 27705;ooCommission of Central African Forests (COMIFAC), Yaounde, Cameroon;ppAgence Nationale des Parcs Nationaux, Libreville, Gabon;qqMinistry of Forests, Seas, Environment and Climate, Libreville, Gabon;rrBureau Waardenburg, 4101 CK Culemborg, The Netherlands;ssFaculty of Forestry, University of British Columbia, Vancouver, BC V6T 1Z4, Canada;ttBiodiversity International, Yaounde, Cameroon;uuInstitute for Transport Studies, University of Leeds, Leeds, LS2 9JT, United Kingdom;vvYale School of Forestry \& Environmental Studies, Yale University, New Haven, CT 06511;wwWildlife Conservation Society, New York, NY 11224;xxInternational Center for Tropical Botany, Department of Biological Sciences, Florida International University, University Park, FL 33199;yyFaculté des Sciences, Service d’Évolution Biologique et écologie, Université Libre de Bruxelles, 1050 Bruxelles, Belgium;zzInstitut de Recherche en Ecologie Tropicale, Libreville, Gabon;aaaSommersbergseestrasse, 8990 Bad Aussee, Austria;bbbWilliam R. Tolbert, Jr. College of Agriculture and Forestry, University of Liberia, Monrovia, LiberiaEdited by Jerome Chave, Centre national de la recherche scientifique, Toulouse, France, and accepted by Editorial Board Member Ruth DeFries February 1, 2021 (received for review March 8, 2020) Footnotes↵1To whom correspondence may be addressed. Email: a.c.bennett@leeds.ac.uk.Author contributions: A.C.B., O.L.P., and S.L.L. designed research; A.C.B., G.C.D., A.C.-S., J.T.M., W.H., J.M.M., O.L.P., Y.M., M.J.P.S., D.L.M.C., S.A.-B., K.A.-B., C.A.A., L.F.B., H.B., S.K.B., Y.E.B., P.B., J.B., T.B., E.C., C.J.C., A.K.D., T.d.H., M.-N.D.K., J.-L.D., F.E.O., C.E.N.E., T.R.F., E.G.F., C.G., J.S.H., O.J.H., D.J.H., S.A.I., K.J.J., E.K., M.L., J.-R.M., F.M.L., V.P.M., V.M., S.M., N.N.B., J.R.P., J.R., B.S., T.C.H.S., H.T., J.T., D.S.T., P.M.U., H.V., J.V., L.J.T.W., H.W., J.T.W., L.Z., and S.L.L. performed research; M.J.P.S., A.L., and G.C.P. contributed new analytic tools; S.L.L. conceived and managed the AfriTRON forest plot recensus programme; A.C.B. analyzed data; and A.C.B. and S.L.L. wrote the paper.The authors declare no competing interest.This article is a PNAS Direct Submission. J.C. is a guest editor invited by the Editorial Board.This article contains supporting information online at https://www-pnas-org.smithsonian.idm.oclc.org/lookup/suppl/doi:10.1073/pnas.2003169118/-/DCSupplemental.},
   eprint = {34001597},
   eprinttype = {pmid},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\INZKSH5A\\Bennett et al. - 2021 - Resistance of African tropical forests to an extre.pdf},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\INZKSH5A\\Bennett et al. - 2021 - Resistance of African tropical forests to an extre.pdf;C\:\\Users\\Me\\Zotero\\storage\\KRJXS99X\\tab-article-info.html},
   langid = {english},
   number = {21}
+}
+
+@article{bennettResistanceAfricanTropical2021a,
+  title = {Resistance of {{African}} Tropical Forests to an Extreme Climate Anomaly},
+  author = {Bennett, Amy C. and Dargie, Greta C. and Cuni-Sanchez, Aida and Tshibamba Mukendi, John and Hubau, Wannes and Mukinzi, Jacques M. and Phillips, Oliver L. and Malhi, Yadvinder and Sullivan, Martin J. P. and Cooper, Declan L. M. and Adu-Bredu, Stephen and Affum-Baffoe, Kofi and Amani, Christian A. and Banin, Lindsay F. and Beeckman, Hans and Begne, Serge K. and Bocko, Yannick E. and Boeckx, Pascal and Bogaert, Jan and Brncic, Terry and Chezeaux, Eric and Clark, Connie J. and Daniels, Armandu K. and de Haulleville, Thales and Djuikouo Kamdem, Marie-Noël and Doucet, Jean-Louis and Evouna Ondo, Fidèle and Ewango, Corneille E. N. and Feldpausch, Ted R. and Foli, Ernest G. and Gonmadje, Christelle and Hall, Jefferson S. and Hardy, Olivier J. and Harris, David J. and Ifo, Suspense A. and Jeffery, Kathryn J. and Kearsley, Elizabeth and Leal, Miguel and Levesley, Aurora and Makana, Jean-Remy and Mbayu Lukasu, Faustin and Medjibe, Vincent P. and Mihindu, Vianet and Moore, Sam and Nssi Begone, Natacha and Pickavance, Georgia C. and Poulsen, John R. and Reitsma, Jan and Sonké, Bonaventure and Sunderland, Terry C. H. and Taedoumg, Hermann and Talbot, Joey and Tuagben, Darlington S. and Umunay, Peter M. and Verbeeck, Hans and Vleminckx, Jason and White, Lee J. T. and Woell, Hannsjoerg and Woods, John T. and Zemagho, Lise and Lewis, Simon L.},
+  date = {2021-05-25},
+  journaltitle = {Proc Natl Acad Sci USA},
+  volume = {118},
+  pages = {e2003169118},
+  issn = {0027-8424, 1091-6490},
+  doi = {10.1073/pnas.2003169118},
+  url = {http://www.pnas.org/lookup/doi/10.1073/pnas.2003169118},
+  urldate = {2021-06-15},
+  abstract = {The responses of tropical forests to environmental change are critical uncertainties in predicting the future impacts of climate change. The positive phase of the 2015–2016 El Niño Southern Oscillation resulted in unprecedented heat and low precipitation in the tropics with substantial impacts on the global carbon cycle. The role of African tropical forests is uncertain as their responses to short-term drought and temperature anomalies have yet to be determined using on-the-ground measurements. African tropical forests may be particularly sensitive because they exist in relatively dry conditions compared with Amazonian or Asian forests, or they may be more resistant because of an abundance of drought-adapted species. Here, we report responses of structurally intact old-growth lowland tropical forests inventoried within the African Tropical Rainforest Observatory Network (AfriTRON). We use 100 long-term inventory plots from six countries each measured at least twice prior to and once following the 2015–2016 El Niño event. These plots experienced the highest temperatures and driest conditions on record. The record temperature did not significantly reduce carbon gains from tree growth or significantly increase carbon losses from tree mortality, but the record drought did significantly decrease net carbon uptake. Overall, the long-term biomass increase of these forests was reduced due to the El Niño event, but these plots remained a live biomass carbon sink (0.51 ± 0.40 Mg C ha               −1               y               −1               ) despite extreme environmental conditions. Our analyses, while limited to African tropical forests, suggest they may be more resistant to climatic extremes than Amazonian and Asian forests.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\NZSKHWPY\\Bennett et al. - 2021 - Resistance of African tropical forests to an extre.pdf},
+  langid = {english},
+  number = {21},
+  options = {useprefix=true}
 }
 
 @article{bertrandChangesPlantCommunity2011,
@@ -7351,6 +7369,22 @@
   series = {Tree {{Physiology}}}
 }
 
+@article{slotGeneralPatternsAcclimation2015,
+  title = {General Patterns of Acclimation of Leaf Respiration to Elevated Temperatures across Biomes and Plant Types},
+  author = {Slot, Martijn and Kitajima, Kaoru},
+  date = {2015-03-01},
+  journaltitle = {Oecologia},
+  volume = {177},
+  pages = {885--900},
+  issn = {1432-1939},
+  doi = {10.1007/s00442-014-3159-4},
+  url = {https://doi.org/10.1007/s00442-014-3159-4},
+  urldate = {2021-06-15},
+  abstract = {Respiration is instrumental for survival and growth of plants, but increasing costs of maintenance processes with warming have the potential to change the balance between photosynthetic carbon uptake and respiratory carbon release from leaves. Climate warming may cause substantial increases of leaf respiratory carbon fluxes, which would further impact the carbon balance of terrestrial vegetation. However, downregulation of respiratory physiology via thermal acclimation may mitigate this impact. We have conducted a meta-analysis with data collected from 43 independent studies to assess quantitatively the thermal acclimation capacity of leaf dark respiration to warming of terrestrial plant species from across the globe. In total, 282 temperature contrasts were included in the meta-analysis, representing 103 species of forbs, graminoids, shrubs, trees and lianas native to arctic, boreal, temperate and tropical ecosystems. Acclimation to warming was found to decrease respiration at a set temperature in the majority of the observations, regardless of the biome of origin and growth form, but respiration was not completely homeostatic across temperatures in the majority of cases. Leaves that developed at a new temperature had a greater capacity for acclimation than those transferred to a new temperature. We conclude that leaf respiration of most terrestrial plants can acclimate to gradual warming, potentially reducing the magnitude of the positive feedback between climate and the carbon cycle in a warming world. More empirical data are, however, needed to improve our understanding of interspecific variation in thermal acclimation capacity, and to better predict patterns in respiratory carbon fluxes both within and across biomes in the face of ongoing global warming.},
+  langid = {english},
+  number = {3}
+}
+
 @report{slotLeafHeatTolerance2020,
   title = {Leaf Heat Tolerance of 147 Tropical Forest Species Varies with Elevation and Leaf Functional Traits, but Not with Phylogeny},
   author = {Slot, Martijn and Cala, Daniela and Aranda, Jorge and Virgo, Aurelio and Michaletz, Sean and Winter, Klaus},
@@ -7380,6 +7414,22 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\JD6H7JWM\\Slot et al. - 2019 - Photosynthetic heat tolerance of shade and sun lea.pdf},
   langid = {english},
   number = {1}
+}
+
+@article{slotPhotosyntheticPlasticityTropical2021,
+  title = {Photosynthetic Plasticity of a Tropical Tree Species, {\textsc{ }}{{{\textsc{{\emph{Tabebuia}}}}}}{\textsc{{\emph{ Rosea}}}}{\textsc{ }} , in Response to Elevated Temperature and [ {\textsc{ }}{{{\textsc{CO}}}}{\textsc{ }}{\textsc{{\textsubscript{2}}}}{\textsc{ }} ]},
+  shorttitle = {Photosynthetic Plasticity of a Tropical Tree Species,},
+  author = {Slot, Martijn and Rifai, Sami W. and Winter, Klaus},
+  date = {2021-03-29},
+  journaltitle = {Plant Cell Environ},
+  pages = {pce.14049},
+  issn = {0140-7791, 1365-3040},
+  doi = {10.1111/pce.14049},
+  url = {https://onlinelibrary.wiley.com/doi/10.1111/pce.14049},
+  urldate = {2021-06-15},
+  abstract = {Atmospheric and climate change will expose tropical forests to conditions they have not experienced in millions of years. To better understand the consequences of this change we studied photosynthetic acclimation of the neotropical tree species Tabebuia rosea to combined 4°C warming and twice-ambient (800 ppm) CO2. We measured temperature responses of the maximum rates of ribulose 1,5-bisphosphate carboxylation (VCMax), photosynthetic electron transport (JMax), net photosynthesis (PNet), and stomatal conductance (gs), and fitted the data using a probabilistic Bayesian approach. To evaluate short-term acclimation plants were then switched between treatment and control conditions and re-measured after 1–2 weeks. Consistent with acclimation, the optimum temperatures (TOpt) for VCMax, JMax and PNet were 1–5°C higher in treatment than in control plants, while photosynthetic capacity (VCMax, JMax, and PNet at TOpt) was 8–25\% lower. Likewise, moving control plants to treatment conditions moderately increased temperature optima and decreased photosynthetic capacity. Stomatal density and sensitivity to leaf-to-air vapor pressure deficit were not affected by growth conditions, and treatment plants did not exhibit stronger stomatal limitations. Collectively, these results illustrate the strong photosynthetic plasticity of this tropical tree species as even fully-developed leaves of saplings transferred to extreme conditions partially acclimated.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\PBWF5GMP\\slot_etal2021_pce_accepted.pdf},
+  langid = {english}
 }
 
 @article{slotSituTemperatureResponse2017,
@@ -8419,6 +8469,25 @@
   keywords = {Beta diversity,climate change,detrended correspondence analyses,Ellenberg indicator values,forest understorey plant species,niche optimum,niche width,plant community,realized niche},
   langid = {english},
   number = {10}
+}
+
+@article{wayJustRightTemperature2019,
+  title = {Just the Right Temperature},
+  author = {Way, Danielle A.},
+  date = {2019-05},
+  journaltitle = {Nat Ecol Evol},
+  volume = {3},
+  pages = {718--719},
+  publisher = {{Nature Publishing Group}},
+  issn = {2397-334X},
+  doi = {10.1038/s41559-019-0877-3},
+  url = {http://www.nature.com/articles/s41559-019-0877-3},
+  urldate = {2021-06-15},
+  abstract = {A global analysis of the relationship between photosynthesis and temperature identifies key similarities and differences when scaling from leaves to ecosystems and suggests that carbon uptake by vegetation may be able to adjust to a warming world.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\39TQVBLQ\\Way - 2019 - Just the right temperature.pdf;C\:\\Users\\Me\\Zotero\\storage\\CGPQSXLQ\\s41559-019-0877-3.html},
+  issue = {5},
+  langid = {english},
+  number = {5}
 }
 
 @article{waySunflecksTreesForests2012,
