--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1305,6 +1305,25 @@
   number = {11}
 }
 
+@article{cunninghamTemperateRainforestTrees2003,
+  title = {Do Temperate Rainforest Trees Have a Greater Ability to Acclimate to Changing Temperatures than Tropical Rainforest Trees?},
+  author = {Cunningham, S. C. and Read, J.},
+  date = {2003},
+  journaltitle = {New Phytologist},
+  volume = {157},
+  pages = {55--64},
+  issn = {1469-8137},
+  doi = {10.1046/j.1469-8137.2003.00652.x},
+  url = {http://nph.onlinelibrary.wiley.com/doi/abs/10.1046/j.1469-8137.2003.00652.x},
+  urldate = {2021-06-15},
+  abstract = {• Photosynthetic responses to acclimation temperature were investigated in seedlings of eight Australian rainforest tree species. Australian rainforests extend over 33° of latitude, providing an opportunity to compare temperature responses of temperate and tropical species. • Net photosynthesis was measured in leaves developed under a constant (22°C : 14°C) or fluctuating (17°C : 9°C−27°C : 19°C) day/night temperature regime. These leaves were then subjected to a series of constant temperature regimes and net photosynthesis was measured 14 d after acclimation to each new regime. • Acclimation potential was not affected by the contrasting temperature regimes. The temperate species showed at least 80\% of maximum net photosynthesis over a larger span of acclimation temperature than the tropical species. • The lack of an effect of the contrasting temperature regimes on acclimation potential may reflect either that adjustments were unnecessary for temperate species, which already have broad photosynthetic responses to temperature, and tropical species were incapable of adjustments, or that in general species respond to the mean temperature regime and not to the amount of fluctuation in the regime. The higher acclimation potential shown by the temperate species is consistent with the larger seasonal and day-to-day variation in temperature of the temperate climate compared with the tropical climate.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1046/j.1469-8137.2003.00652.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\DWBU3SC6\\Cunningham and Read - 2003 - Do temperate rainforest trees have a greater abili.pdf;C\:\\Users\\Me\\Zotero\\storage\\9EB7U9VS\\j.1469-8137.2003.00652.html},
+  keywords = {climate,latitude,maximum net photosynthesis,optimum temperature,photosynthetic acclimation},
+  langid = {english},
+  number = {1}
+}
+
 @article{curtis_intracanopy_2019,
   title = {Intracanopy Adjustment of Leaf-Level Thermal Tolerance Is Associated with Microclimatic Variation across the Canopy of a Desert Tree ({{Acacia}} Papyrocarpa)},
   author = {Curtis, Ellen M. and Knight, Charles A. and Leigh, Andrea},
